# 15-03-2025-zadania-PK

./: README.md  pyproject.toml
.github/workflows/: python-app.yml
solution/: __init__.py  console_app.py
tests/: test.py  test_base.py  test_features.py
